# HW-c-

./: HWMoskalenkoA11.cpp  HWMoskalenkoA15.cpp  Shop.docx  tem1.cpp  tem2.cpp  tem3.cpp  tem4.cpp  tem5.cpp  tem6.cpp  tem7.cpp  tem8.cpp  tem9.cpp
HW11/: main_toys.cpp  toys.cpp  toys.h
HW11(8)/: file_processor.cpp  file_processor.h  main.cpp
MoskalenkoAlin15/: HW21  HWMoskalenkoA21.cpp  tem1  tem1.cpp  tem2.cpp  tem3.cpp  tem6  tem6.cpp
MoskalenkoAlina10/: HWMoskalenkoA10.cpp  HWMoskalenkoA6.cpp  tem1.cpp  tem2.cpp
MoskalenkoAlina12/: F.txt  G.txt  HWMoskalenkoA16.cpp
MoskalenkoAlina13/: Rational.cpp  Rational.h  geometry.cpp  geometry.h  main.cpp  main_g.cpp  main_p.cpp  product.cpp  product.h  tem2.cpp
MoskalenkoAlina14/: HW18  HW18(2)  HWMoskalenkoA18.cpp  lect1.cpp  lect2.cpp  lect3.cpp  tem1  tem4  tem4.cpp  tem5  tem5.cpp  text
MoskalenkoAlina16/: HWMoskalenkoA3.cpp  tem1.cpp
MoskalenkoAlina17/: HWMoskalenkoA8.cpp  lect1.cpp  lect2.cpp
MoskalenkoAlina18/: HWMoskalenkoA5a.cpp  tem1.cpp  tem2.cpp
MoskalenkoAlina19/: HWMoskalenkoA17.cpp  tem1.cpp  tem2.cpp  tem3.cpp
MoskalenkoAlina20/: HWMoskalenkoA20(15).cpp  HWMoskalenkoA21(19).cpp  english_text.txt  points.txt  tem1.cpp  tem2.cpp  tem3.cpp
MoskalenkoAlina3/: HWMoskalenko23(g).cpp  HWMoskalenkoA21.cpp  tem1.cpp  tem2.cpp  tem3.cpp  tem4.cpp  tem5.cpp  tem6.cpp  tem7.cpp
MoskalenkoAlina7/: HWMoskalenkoalina16.cpp  HWMoskalenkoalina9a.cpp  tem1.cpp  tem2.cpp  (+4 more)
shop/: CMakeLists.txt  main.cpp  store.cpp  store.h  store_test.cpp
shop_с/: CMakeLists.txt  main.c  store.c  store.h  store_test.c
(+51 files in other folders)
